--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,3 +25,5 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: JUnit Report Action
       uses: mikepenz/action-junit-report@v2.4.3
+      with:
+        report_paths: '**/target/surefire-reports/TEST-*.xml'
